UPDATE IPYNB and dashboard.py added

--- a/churn_prediction_model.ipynb
+++ b/churn_prediction_model.ipynb
@@ -52,12 +52,12 @@
    "id": "b2abc4dc",
    "metadata": {},
    "source": [
-    "Load data"
+    "Loading data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "fd88cccb",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,6 @@
     }
    ],
    "source": [
-    "# Loading data\n",
     "df = pd.read_csv(\"Telco-Customer-Churn.csv\")\n",
     "df"
    ]
@@ -460,21 +459,19 @@
    "id": "ce7f8f50",
    "metadata": {},
    "source": [
-    "Convert and Drop"
+    "Convert 'TotalCharges' to numeric, drop missing values and drop 'customerID' as it's not useful for modeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "b952ab18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert 'TotalCharges' to numeric and drop missing values\n",
     "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
     "df.dropna(subset=['TotalCharges'], inplace=True)\n",
     "\n",
-    "# Drop 'customerID' as it's not useful for modeling\n",
     "df.drop('customerID', axis=1, inplace=True)"
    ]
   },
@@ -483,33 +480,38 @@
    "id": "6d9bfa12",
    "metadata": {},
    "source": [
-    "Encode"
+    "Encode binary columns and encode target variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "d4b81863",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Encode binary columns\n",
     "binary_cols = ['gender', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling']\n",
     "for col in binary_cols:\n",
     "    df[col] = LabelEncoder().fit_transform(df[col])\n",
     "\n",
-    "# Encode target variable\n",
     "df['Churn'] = df['Churn'].map({'Yes': 1, 'No': 0})"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af28ee4c",
+   "metadata": {},
+   "source": [
+    "One-hot encode remaining categorical columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "7a97b597",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One-hot encode remaining categorical columns\n",
     "multi_cat_cols = ['MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup',\n",
     "                  'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies',\n",
     "                  'Contract', 'PaymentMethod']\n",
@@ -522,12 +524,12 @@
    "id": "34de25c0",
    "metadata": {},
    "source": [
-    "Final"
+    "Final shape and preview"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "51d4202e",
    "metadata": {},
    "outputs": [
@@ -767,7 +769,6 @@
     }
    ],
    "source": [
-    "# Final shape and preview\n",
     "print(\"Encoded dataset shape:\", df_encoded.shape)\n",
     "df_encoded.head()"
    ]
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d0e065d7",
    "metadata": {},
    "outputs": [
@@ -873,7 +874,6 @@
     "# Only select numeric columns for correlation matrix\n",
     "numeric_df = df_encoded.select_dtypes(include=[np.number])\n",
     "\n",
-    "# Heatmap of correlations\n",
     "plt.figure(figsize=(15,10))\n",
     "sns.heatmap(numeric_df.corr(), cmap='coolwarm', annot=False)\n",
     "plt.title(\"Correlation Heatmap (Numeric Features Only)\")\n",
@@ -1007,8 +1007,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae94bc88",
+   "metadata": {},
+   "source": [
+    "Confusion matrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "f5c36930",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1032,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6,4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=['No Churn', 'Churn'], yticklabels=['No Churn', 'Churn'])\n",
@@ -1055,8 +1062,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9668be34",
+   "metadata": {},
+   "source": [
+    "ROC-AUC"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "34fbd9eb",
    "metadata": {},
    "outputs": [
@@ -1069,14 +1084,21 @@
     }
    ],
    "source": [
-    "# ROC-AUC\n",
     "roc_auc = roc_auc_score(y_test, y_proba)\n",
     "print(f\" ROC-AUC Score: {roc_auc:.4f}\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31361349",
+   "metadata": {},
+   "source": [
+    "ROC Curve"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "971cfd8b",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1114,6 @@
     }
    ],
    "source": [
-    "# ROC Curve\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_proba)\n",
     "plt.figure(figsize=(6,4))\n",
     "plt.plot(fpr, tpr, label=f\"AUC = {roc_auc:.2f}\")\n",
@@ -1155,8 +1176,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3374220",
+   "metadata": {},
+   "source": [
+    "Plot top features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "752670e8",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1212,6 @@
     }
    ],
    "source": [
-    "# Plot top features\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.barplot(x='Importance', y='Feature', data=feat_importance_df, palette='viridis')\n",
     "plt.title(\"Top 15 Important Features - Random Forest\")\n",
@@ -1210,8 +1238,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ca55243",
+   "metadata": {},
+   "source": [
+    "INPUT FOR PERDICTION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "f95e123d",
    "metadata": {},
    "outputs": [
@@ -1226,65 +1262,52 @@
    "source": [
     "print(\"Please provide customer details for churn prediction:\")\n",
     "\n",
-    "# Basic numerical features\n",
     "tenure = int(input(\"Tenure (in months): \"))\n",
     "monthly_charges = float(input(\"Monthly Charges: \"))\n",
     "total_charges = float(input(\"Total Charges: \"))\n",
     "\n",
-    "# Binary categorical features (map to 0/1)\n",
     "gender = int(input(\"Gender (0 = Female, 1 = Male): \"))\n",
     "partner = int(input(\"Partner (0 = No, 1 = Yes): \"))\n",
     "dependents = int(input(\"Dependents (0 = No, 1 = Yes): \"))\n",
     "phone_service = int(input(\"Phone Service (0 = No, 1 = Yes): \"))\n",
     "paperless_billing = int(input(\"Paperless Billing (0 = No, 1 = Yes): \"))\n",
     "\n",
-    "# Multi-class encoded as binary columns (one-hot)\n",
-    "# MultipleLines\n",
     "ml_choice = input(\"Multiple Lines (None, Yes, No phone service): \").strip().lower()\n",
     "ml_yes = int(ml_choice == \"yes\")\n",
     "ml_nophone = int(ml_choice == \"no phone service\")\n",
     "\n",
-    "# Internet Service\n",
     "is_choice = input(\"Internet Service (DSL, Fiber optic, No): \").strip().lower()\n",
     "is_fiber = int(is_choice == \"fiber optic\")\n",
     "is_no = int(is_choice == \"no\")\n",
     "\n",
-    "# Online Security\n",
     "os_choice = input(\"Online Security (Yes, No): \").strip().lower()\n",
     "os_yes = int(os_choice == \"yes\")\n",
     "os_no = int(os_choice == \"no\")\n",
     "\n",
-    "# Online Backup\n",
     "ob_choice = input(\"Online Backup (Yes, No): \").strip().lower()\n",
     "ob_yes = int(ob_choice == \"yes\")\n",
     "ob_no = int(ob_choice == \"no\")\n",
     "\n",
-    "# Device Protection\n",
     "dp_choice = input(\"Device Protection (Yes, No): \").strip().lower()\n",
     "dp_yes = int(dp_choice == \"yes\")\n",
     "dp_no = int(dp_choice == \"no\")\n",
     "\n",
-    "# Tech Support\n",
     "ts_choice = input(\"Tech Support (Yes, No): \").strip().lower()\n",
     "ts_yes = int(ts_choice == \"yes\")\n",
     "ts_no = int(ts_choice == \"no\")\n",
     "\n",
-    "# Streaming TV\n",
     "stv_choice = input(\"Streaming TV (Yes, No): \").strip().lower()\n",
     "stv_yes = int(stv_choice == \"yes\")\n",
     "stv_no = int(stv_choice == \"no\")\n",
     "\n",
-    "# Streaming Movies\n",
     "sm_choice = input(\"Streaming Movies (Yes, No): \").strip().lower()\n",
     "sm_yes = int(sm_choice == \"yes\")\n",
     "sm_no = int(sm_choice == \"no\")\n",
     "\n",
-    "# Contract\n",
     "contract = input(\"Contract (Month-to-month, One year, Two year): \").strip().lower()\n",
     "contract_one = int(contract == \"one year\")\n",
     "contract_two = int(contract == \"two year\")\n",
     "\n",
-    "# Payment Method\n",
     "pm = input(\" Method (Electronic check, Mailed check, Bank transfer, Credit card): \").strip().lower()\n",
     "pm_credit = int(pm == \"credit card\")\n",
     "pm_echeck = int(pm == \"electronic check\")\n",
@@ -1292,13 +1315,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9136678c",
+   "metadata": {},
+   "source": [
+    "Construct input DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "4bd11d74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Construct input DataFrame\n",
     "user_data = pd.DataFrame([{\n",
     "    'tenure': tenure,\n",
     "    'MonthlyCharges': monthly_charges,\n",
@@ -1333,44 +1363,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b1f7ac5",
+   "metadata": {},
+   "source": [
+    "Handle any missing columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "009fca2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Handle any missing columns\n",
     "missing_cols = set(expected_columns) - set(user_data.columns)\n",
     "for col in missing_cols:\n",
     "    user_data[col] = 0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "f9cd018b",
+   "cell_type": "markdown",
+   "id": "cb7671de",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Step 4: Reorder to match training data\n",
-    "user_data = user_data[expected_columns]"
+    "Reorder to match training data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
+   "id": "f9cd018b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_data = user_data[expected_columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb1c6e86",
+   "metadata": {},
+   "source": [
+    "Predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8f6444a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Predict\n",
     "churn_prediction = rf_model.predict(user_data)[0]\n",
     "churn_proba = rf_model.predict_proba(user_data)[0][1]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6489ff29",
+   "metadata": {},
+   "source": [
+    "Output Result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "50c9ca89",
    "metadata": {},
    "outputs": [
@@ -1386,10 +1445,59 @@
     }
    ],
    "source": [
-    "# Step 6: Output Result\n",
     "print(\"\\n🔮 Prediction Result:\")\n",
     "print(f\"➡️ Prediction: {'Churn' if churn_prediction == 1 else 'Not Churn'}\")\n",
     "print(f\"📊 Churn Probability: {churn_proba:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01da188b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model and columns saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Import libraries\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import joblib\n",
+    "\n",
+    "# Step 2: Load data\n",
+    "df = pd.read_csv(\"Telco-Customer-Churn.csv\")\n",
+    "\n",
+    "# Step 3: Clean and encode\n",
+    "df.drop(['customerID'], axis=1, inplace=True)\n",
+    "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Label encode categorical features\n",
+    "for col in df.select_dtypes(include='object').columns:\n",
+    "    df[col] = LabelEncoder().fit_transform(df[col])\n",
+    "\n",
+    "# Step 4: Split data\n",
+    "X = df.drop(\"Churn\", axis=1)\n",
+    "y = df[\"Churn\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 5: Train model\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Step 6: Save model and columns\n",
+    "joblib.dump(rf_model, \"churn_prediction_model.pkl\")\n",
+    "joblib.dump(X.columns.tolist(), \"model_columns.pkl\")\n",
+    "\n",
+    "print(\"✅ Model and columns saved successfully.\")\n"
    ]
   }
  ],
